--- a/validator/validator_derive/Cargo.toml
+++ b/validator/validator_derive/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = { version = "1.0", features = ["extra-traits"] }
+syn = { version = "1.0", features = ["extra-traits", "derive", "parsing"] }
 proc-macro-error = "1"
 quote = "1.0"
