feat: add logger

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
+chrono = "0.4.23"
+colored = "2.0.0"
 validator = { path = "./validator" }
