--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 chrono = "0.4.23"
 colored = "2.0.0"
+ureq = { version = "2.6.2", features = ["json"] }
 validator = { path = "./validator" }
