--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
+serde_json = "1.0"
 chrono = "0.4.23"
 colored = "2.0.0"
 ureq = { version = "2.6.2", features = ["json"] }
